# Return-to-the-Curve

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  rebuild.sh  run.sh
Curve/: Curve.sln  Engine.filters  Engine.vcxproj  Engine.vcxproj.filters  triangle.vert.glsl
Resources/: preferences.yaml
Resources/levels/: Level-1.yaml  Level-2.yaml  Level-3.yaml  Level1.txt
Resources/prefabs/: Enemy.yaml  Finish.yaml  Halfpipe.yaml  Lightning Speed.yaml  Marble.yaml  Pillar Hexagon.yaml  Pipe.yaml  Quarterpipe.yaml  Super Jump.yaml  Trap Diamond.yaml  Unit Cube.yaml  box_8x2x6.yaml  pillar_hexagon.yaml
Resources/shaders/: beam.frag.glsl  beam.vert.glsl  circle.frag.glsl  circle.vert.glsl  circle_vert.glsl  cube_outline.frag.glsl  cube_outline.vert.glsl  depth_debug.vert.glsl  object_map.frag.glsl  object_map.vert.glsl  particle.frag.glsl  particle.vert.glsl  pbr.frag.glsl  pbr.vert.glsl  sky.vert.glsl  sky_frag.glsl  ui.frag.glsl  ui.vert.glsl  world_depth.frag.glsl  world_depth.vert.glsl
Source/: Camera.cpp  Camera.h  GLSL.cpp  GLSL.h  GLTextureWriter.cpp  GLTextureWriter.h  MatrixStack.cpp  MatrixStack.h  Object3D.cpp  Object3D.h  Pathing.cpp  Pathing.h  Program.cpp  Program.h  Shape.cpp  Shape.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  WindowManager.cpp  WindowManager.h  main.cpp
Source/effects/: ParticleFirework.cpp  ParticleFirework.h  ParticleSpark.cpp  ParticleSpark.h  ParticleWind.cpp  ParticleWind.h  Sound.cpp  Sound.h
Source/engine/: Behavior.h  BoundingBox.cpp  BoundingBox.h  Collider.cpp  Collider.h  ColliderMesh.cpp  ColliderMesh.h  ColliderSphere.cpp  ColliderSphere.h  EmitterManager.cpp  EmitterManager.h  Frustum.cpp  Frustum.h  GameObject.cpp  GameObject.h  Instance.cpp  Instance.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  ModelManager.cpp  ModelManager.h  Octree.cpp  Octree.h  ParticleEmitter.cpp  ParticleEmitter.h  PhysicsObject.cpp  PhysicsObject.h  Prefab.cpp  Prefab.h  PrefabManager.cpp  PrefabManager.h  Preferences.cpp  Preferences.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h  SkyboxManager.cpp  (+12 more)
Source/gameobjects/: Ball.cpp  Ball.h  Beam.cpp  Beam.h  Blower.cpp  Blower.h  Box.cpp  Box.h  Enemy.cpp  Enemy.h  Goal.cpp  Goal.h  PowerUp.cpp  PowerUp.h  Volume.cpp  Volume.h
Source/uiobjects/: Logo.cpp  Logo.h
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  curve
build2/yaml-cpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake  yaml-cpp-config.cmake  yaml-cpp-targets.cmake
docs/: index.html  style.css
glad/src/: glad.c
portaudio/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
resources/shaders/: circle_vert.glsl  mat_frag.glsl  sky_vert.glsl  tex.frag.glsl  tex_frag.glsl  tex_vert.glsl
slnStuff/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  curve.sln  curve.vcxproj  curve.vcxproj.filters
src/: Camera.cpp  Camera.h  MatrixStack.cpp  Object3D.cpp  Object3D.h  Pathing.cpp  Pathing.h  Player.cpp  Player.h  Program.cpp  Shape.cpp  Shape.h  Skybox.cpp  Skybox.h  Texture.cpp  WindowManager.cpp  main.cpp
src/engine/: BoundingBox.cpp  BoundingBox.h  (+18 more)
yaml-cpp/: CMakeLists.txt
(+28 files in other folders)
